# vercel-functions

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
src/: __init__.py
src/tools/: __init__.py  _tool.py  email_tool.py  search_tool.py
