[project]
name = "vercel-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "base64perf>=0.0.11",
    "boto3>=1.39.15",
    "boto3-stubs[all]>=1.39.15",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "groq>=0.30.0",
    "markdown>=3.8.2",
    "markdown-it-py>=3.0.0",
    "markdown-normalization>=0.0.1",
    "markdown2>=2.5.4",
    "pdfkit>=1.0.0",
    "pygments>=2.19.2",
    "python-dotenv>=1.1.1",
    "rustid>=0.0.1",
    "sendgrid>=6.12.4",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
    "weasyprint>=66.0",
]
